--- a/HTML Test1/Createaccountpage/HTMLPage1.html
+++ b/HTML Test1/Createaccountpage/HTMLPage1.html
@@ -1,11 +1,75 @@
-﻿<!DOCTYPE html>
-
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html>
+<html>
 <head>
-    <meta charset="utf-8" />
-    <title></title>
+<title>Document</title>
 </head>
-<body>
+<div style="border:3px solid black;width:500px;length:800px;float-left">
+<body bgcolor="pink">
+<h2> CREATE AN ACCOUNT</h2>
+<label>Enter username<input type="text"></input><br></label></br>
+<label>Enter password<input type="password"></input></label><br></br>
+<label>Age : </label><select>
+<option value="1-10">SelectAge</option>
+<option value="1-10">Age:1-10</option>
+<option value="11-20">Age:11-20</option>
+<option value="21-30">Age:21-30</option>
+<option value="31-50">Age:31-50</option>
+<option value="50-70">Age:50-70</option>
+</select>
 
+
+
+</select><br><br>
+
+
+
+
+
+<label for="tex">Tell Us a Little About Yourself:</label><br><br>
+<textarea id="tex" name="tex" rows="5" cols="30"></textarea><br><br>
+<div class="tacbox">
+<input id="checkbox" type="checkbox" />
+<label for="checkbox"> I agree to these <a href="#">Terms and Conditions</a>.</label>
+<br>
+</div>
+<a href="C:\Dotnet Assignment&Exam\HTML Test1\Welcome page\HTMLPage1.html"><input type="submit" value="Signup"></input></a></br>
+</div>
+</body>
+</html><!DOCTYPE html>
+<html>
+<head>
+<title>Document</title>
+</head>
+<div style="border:3px solid black;width:500px;length:800px;float-left">
+<body bgcolor="pink">
+<h2> CREATE AN ACCOUNT</h2>
+<label>Enter username<input type="text"></input><br></label></br>
+<label>Enter password<input type="password"></input></label><br></br>
+<label>Age : </label><select>
+<option value="1-10">SelectAge</option>
+<option value="1-10">Age:1-10</option>
+<option value="11-20">Age:11-20</option>
+<option value="21-30">Age:21-30</option>
+<option value="31-50">Age:31-50</option>
+<option value="50-70">Age:50-70</option>
+</select>
+
+
+
+</select><br><br>
+
+
+
+
+
+<label for="tex">Tell Us a Little About Yourself:</label><br><br>
+<textarea id="tex" name="tex" rows="5" cols="30"></textarea><br><br>
+<div class="tacbox">
+<input id="checkbox" type="checkbox" />
+<label for="checkbox"> I agree to these <a href="#">Terms and Conditions</a>.</label>
+<br>
+</div>
+<a href="C:\Dotnet Assignment&Exam\HTML Test1\Welcome page\HTMLPage1.html"><input type="submit" value="Signup"></input></a></br>
+</div>
 </body>
 </html>
